Add a check NULL of the source accessible handling an event

https://bugzilla.gnome.org/show_bug.cgi?id=726243